Bug 90803 - btrfs_subvol_snapshot() broken
Summary: btrfs_subvol_snapshot() broken
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: systemd-bugs
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-01 17:06 UTC by David Herrmann
Modified: 2015-06-15 17:05 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
strace log (10.39 KB, text/plain)
2015-06-01 17:06 UTC, David Herrmann
Details

Description David Herrmann 2015-06-01 17:06:02 UTC
Created attachment 116211 [details]
strace log

Hi

Running `systemd-nspawn -D / -xb` produces the following error for me:

  david@david-t2 ~/dev/systemd $ sudo ./systemd-nspawn -D / -xb
  Failed to create snapshot /.#a726c057b3fe24c6 from /: No such file or directory

I tracked this down to btrfs_subvol_snapshot(), and subvol_snapshot_children() in particular. If called with BTRFS_SNAPSHOT_RECURSIVE, it fails in the recursion step.

My root system consists of the root snapshot at '/', and a btrfs snapshot at '/var/lib/machines'. The strace output is attached.

Thanks
David
Comment 1 David Herrmann 2015-06-15 17:05:05 UTC
Fixed upstream by Lennart in 90578cbd71812c0f1b6d151c708cb00bbb359053.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.